--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     function showOnlineError() {
       let notif = document.createElement("div");
       notif.className = "notification error";
-      notif.innerText = "Произошла неизвестная ошибка. (Код: 407)";
+      notif.innerText = "Вы заблокированы в GTA Online навсегда. (Код: 407)";
       document.body.appendChild(notif);
       setTimeout(() => notif.remove(), 4000);
     }
@@ -309,3 +309,4 @@
   </script>
 </body>
 </html>
+
